--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
+    "@farcaster/frame-node": "^0.0.29",
     "@farcaster/frame-sdk": "^0.0.38",
     "@farcaster/frame-wagmi-connector": "^0.0.26",
     "@tanstack/react-query": "^5.75.7",
