--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@farcaster/frame-node": "^0.0.29",
     "@farcaster/frame-sdk": "^0.0.38",
     "@farcaster/frame-wagmi-connector": "^0.0.26",
+    "@sentry/nextjs": "^9.19.0",
     "@tanstack/react-query": "^5.75.7",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
