--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@farcaster/frame-node": "^0.0.29",
     "@farcaster/frame-sdk": "^0.0.38",
     "@farcaster/frame-wagmi-connector": "^0.0.26",
-    "@tanstack/react-query": "^5.75.7",
+    "@tanstack/react-query": "^5.76.1",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
@@ -24,17 +24,17 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
-    "viem": "^2.29.2",
-    "wagmi": "^2.15.2",
-    "zod": "^3.24.4",
+    "viem": "2.29.2",
+    "wagmi": "^2.15.4",
+    "zod": "^3.25.7",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "typescript": "^5.8.3",
-    "@types/node": "^20.17.46",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@tailwindcss/postcss": "^4.1.6",
-    "tailwindcss": "^4.1.6"
+    "@types/node": "^20.17.49",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@tailwindcss/postcss": "^4.1.7",
+    "tailwindcss": "^4.1.7"
   }
 }
