--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@farcaster/frame-node": "^0.0.29",
     "@farcaster/frame-sdk": "^0.0.38",
     "@farcaster/frame-wagmi-connector": "^0.0.26",
+    "@fireworks-js/react": "^2.10.8",
     "@tanstack/react-query": "^5.76.1",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
