--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.29",
-    "@farcaster/frame-sdk": "^0.0.38",
+    "@farcaster/frame-sdk": "^0.0.53",
     "@farcaster/frame-wagmi-connector": "^0.0.26",
+    "@farcaster/quick-auth": "^0.0.6",
     "@fireworks-js/react": "^2.10.8",
-    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query": "^5.77.2",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
@@ -24,16 +25,16 @@
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.0",
+    "react-router": "^7.6.1",
     "viem": "2.29.2",
     "wagmi": "^2.15.4",
-    "zod": "^3.25.7",
-    "zustand": "^5.0.4"
+    "zod": "^3.25.32",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "typescript": "^5.8.3",
-    "@types/node": "^20.17.49",
-    "@types/react": "^19.1.4",
+    "@types/node": "^20.17.51",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@tailwindcss/postcss": "^4.1.7",
     "tailwindcss": "^4.1.7"
