feat: og generation

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,11 @@
 # main
+ALCHEMY_API_KEY=
+NEXT_PUBLIC_HOST=
+NEYNAR_API_KEY=
 MONGODB_URI=
 SECRET=
-NEYNAR_API_KEY=
-NEXT_PUBLIC_HOST=
+JWT_SECRET=
 
 # development
 NEXT_PUBLIC_HOST=
+
